--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header>
     <nav>
         <div class="logo">
-            <img src="logo-placeholder.png" alt="LOGO" id="logo">
+            <img src="my-notion-face-transparent.png" alt="LOGO" id="logo">
         </div>
         <button class="hamburger" id="hamburger">
             ☰
