--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://codepen.io/l1no/pen/rNrMPxp.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Page title</title>
 </head>
 <body>
@@ -11,10 +11,8 @@
     <section id="header">
         <div class="header container">
             <div class="nav-bar">
-                <div class="brand">
-                    <a href="#hero">
-                        <h1><span>Web</span>site <span>P</span>ractice</h1>
-                    </a>
+                <div class="logo">
+                    <img src="/img/Portrait.png" id="logo">
                 </div>
                 <div class="nav-list">
                     <div class="hamburger">
@@ -36,8 +34,8 @@
     <section id="hero">
         <div class="hero container">
             <div>
-                <h1>Hello<span></span></h1>
-                <h1>the<span></span></h1>
+                <h1>Hi<span></span></h1>
+                <h1>I'm<span></span></h1>
                 <h1>WORLD<span></span></h1>
                 <a herf="#" type="button" class="cta">Portfolio</a>
             </div>
@@ -123,7 +121,8 @@
             <div class="col-right">
                 <h1 class="section-title">About <span>ME</span></h1>
                 <h2>Subtitle</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni! Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!</p>
+                <p>A diligent Product Designer with experience across industry and government.
+                    Designed products and projects for Taiwanese citizens.</p>
                 <a href="#" class="cta">Download Resume</a>
             </div>
         </div>
@@ -133,32 +132,17 @@
     <section id="contact">
         <div class="contact container">
             <h1 class="section-title">Contact <span>info</span></h1>
-        </div>
-        <div class="contact-items">
-            <div class="contact-item">
-                <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
-                <div class="contact-info">
-                    <h1>Phone</h1>
-                    <h2>+1 234 456 789</h2>
-                    <h2>+1 234 456 789</h2>
-                </div>
-            </div>
-            <div class="contact-item">
-                <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
-                <div class="contact-info">
-                    <h1>Email</h1>
-                    <h2>info@gmail.com</h2>
-                    <h2>test@gmail.com</h2>
-                </div>
-            </div>
-            <div class="contact-item">
-                <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
-                <div class="contact-info">
-                    <h1>Address</h1>
-                    <h2>Downtown, City, Country</h2>
+            <div class="contact-items">
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+                    <div class="contact-info">
+                        <h1>Email</h1>
+                        <h2>info@gmail.com</h2>
+                    </div>
                 </div>
             </div>
         </div>
+
     </section>
     <!--End contact section-->
 </body>
@@ -167,7 +151,7 @@
     <section id="footer">
         <div class="footer container">
             <div class="brand">
-                <h1><span>Web</span>site <span>P</span>ractice</h1>
+                <h1>Title</h1>
             </div>
             <h2>My First Website practice</h2>
             <div class="social-icon">
@@ -189,4 +173,5 @@
     </section>
     <!--End Footer section-->
 </footer>
+    <script src="script.js"></script>
 </html>
