--- a/index copy.html
+++ b/index copy.html
@@ -9,22 +9,22 @@
 <body>
     <!-- Header -->
     <section id="header">
-        <div class="header container">
-            <div class="nav-bar">
-                <div class="logo">
-                    <img src="/img/Portrait.png" id="logo">
+        <div class="header-container">
+            <div class="logo">
+                <img src="/img/Portrait.png" id="logo">
+            </div>
+            <div class="nav-list">
+                <div class="hamburger">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
                 </div>
-                <div class="nav-list">
-                    <div class="hamburger">
-                        <div class="bar"></div>
-                    </div>
-                    <ul>
-                        <li><a href="#hero" data-after="Home">Home</a></li>
-                        <li><a href="#services" data-after="Service">Services</a></li>
-                        <li><a href="#projects" data-after="Projects">Projects</a></li>
-                        <li><a href="#about" data-after="About">About</a></li>
-                    </ul>
-                </div>
+                <ul>
+                    <li><a href="#hero" data-after="Home">Home</a></li>
+                    <li><a href="#services" data-after="Service">Services</a></li>
+                    <li><a href="#projects" data-after="Projects">Projects</a></li>
+                    <li><a href="#about" data-after="About">About</a></li>
+                </ul>
             </div>
         </div>
     </section>
@@ -73,11 +73,10 @@
 </body>
 <footer>
     <!--Start Footer section-->
-    <section id="footer">
-        <div class="footer container">
-            <h1>Copyright © 2025 Lino. All rights reserved</h1>
-        </div>
-    </section>
+    <div class="footer-container">
+        <h1>Copyright © 2025 Lino</h1>
+        <h1>All rights reserved</h1>
+    </div>
     <!--End Footer section-->
 </footer>
     <script src="script.js"></script>
