--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./img/resume-example.pdf')"
           >
             Download CV
           </button>
@@ -134,7 +134,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./img/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -150,7 +150,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -161,7 +161,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -172,7 +172,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -183,7 +183,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -194,7 +194,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -205,7 +205,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -221,7 +221,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -232,7 +232,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -243,7 +243,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -254,7 +254,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./img/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -268,7 +268,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./img/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -282,7 +282,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./img/project-1.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -306,7 +306,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./img/project-2.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -330,7 +330,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./img/project-3.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -354,7 +354,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./img/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -366,7 +366,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="./img/email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -374,7 +374,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="./img/linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
