--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="./img/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -113,7 +113,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="./img/education.png"
                 alt="Education icon"
                 class="icon"
               />
