--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             class="btn btn-color-2"
             onclick="window.open('./img/resume-example.pdf')"
           >
-            Download CV
+            Resume
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="window.open('./img/resume-example.pdf', '_blank')">
             Contact Info
           </button>
         </div>
