--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           >
             Resume
           </button>
-          <button class="btn btn-color-1" onclick="window.open('./img/resume-example.pdf', '_blank')">
+          <button class="btn btn-color-1" onclick="window.open('./img/2025_Resume_Ossian Lin.pdf', '_blank')">
             Contact Info
           </button>
         </div>
