--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
         </div>
         <div id="socials-container">
           <img
-            src="./img/linkedin.png"
+            src="./img/Linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/ossianlin19739513/'"
           />
           <img
-            src="./img/github.png"
+            src="./img/Twitter.png"
             alt="My twitter"
             class="icon"
-            onclick="location.href='https://twitter.com/'"
+            onclick="location.href='https://x.com/L1N0_TW'"
           />
           <img
-            src="./img/github.png"
+            src="./img/Github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/L1NO'"
           />
           <img
             src="./img/Medium.png"
             alt="My Medium"
             class="icon"
-            onclick="location.href=''"
+            onclick="location.href='https://medium.com/sekkei-tori-seikatsu'"
           />
           <img
             src="./img/email.png"
@@ -123,12 +123,9 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              As a Product Designer with over 5 years of experience, I am driven by a passion for creating innovative and user-friendly products. 
+              My background includes web design, and I've successfully led projects in diverse domains, including government services and the private sector, 
+              where I currently contribute to a leading B2C parking and electronic toll collection service in Taiwan.
             </p>
           </div>
         </div>
@@ -374,7 +371,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./img/linkedin.png"
+            src="./img/Linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
