--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./img/resume-example.pdf')"
+            onclick="window.open('./img/2025_Resume_Ossian Lin.pdf', '_blank')"
           >
             Resume
           </button>
-          <button class="btn btn-color-1" onclick="window.open('./img/2025_Resume_Ossian Lin.pdf', '_blank')">
-            Contact Info
+          <button class="btn btn-color-1" onclick="location.href='./img/qr-code.png', '_blank'">
+            Share
           </button>
         </div>
         <div id="socials-container">
