--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           >
             Resume
           </button>
+          <div>
           <button class="btn btn-color-1" onclick="openPop()">
             Share
           </button>
@@ -58,6 +59,7 @@
             <button onclick="openPop()">
                 Close
             </button>
+          </div>
           </div>
         </div>
         <div id="socials-container">
