--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </button>
           <div id="popupDialog">
             <img src="./img/qr-code.png" alt="QR code" />
-            <button onclick="openPop()">
+            <button class="btn btn-color-1" onclick="openPop()">
                 Close
             </button>
           </div>
