--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./img/2025_Resume_Ossian Lin.pdf', '_blank')"
+            onclick="window.open('./img/2025_Resume_Ossian Lin.pdf')"
           >
             Resume
           </button>
