--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
             onclick="location.href='https://x.com/L1N0_TW'"
           />
           <img
-            src="./img/Github.png"
-            alt="My Github profile"
+            src="./img/Instagram.png"
+            alt="My Instagram"
             class="icon"
-            onclick="location.href='https://github.com/L1NO'"
+            onclick="location.href='https://www.instagram.com/l1n0_tw/'"
           />
           <img
             src="./img/Medium.png"
@@ -88,10 +88,10 @@
             onclick="location.href='https://medium.com/sekkei-tori-seikatsu'"
           />
           <img
-            src="./img/email.png"
-            alt="My email"
+            src="./img/Github.png"
+            alt="My Github profile"
             class="icon"
-            onclick="location.href=''"
+            onclick="location.href='https://github.com/L1NO'"
           />
         </div>
       </div>
@@ -375,15 +375,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
-        </div>
-        <div class="contact-info-container">
-          <img
-            src="./img/Linkedin.png"
-            alt="LinkedIn icon"
-            class="icon contact-icon"
-          />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="mailto:examplemail@gmail.com">ossianlin@gmail.com</a></p>
         </div>
       </div>
     </section>
