--- a/index.html
+++ b/index.html
@@ -149,13 +149,8 @@
       <div class="experience-details-container">
         <div class="about-containers" id="projects-list"></div>
       </div>
-      <img
-        src="./img/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
     </section>
+    <!-- Contact -->
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
@@ -166,21 +161,11 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">ossianlin@gmail.com</a></p>
+          <p>ossianlin@gmail.com</p>
         </div>
       </div>
     </section>
     <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
       <p>Copyright &#169; 2025 Ossian Lin. All Rights Reserved.</p>
     </footer>
     <script src="experiences.js"></script>
