--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/ossianlin19739513/'"
-            style="cursor: pointer"
           />
           <img
             src="./img/Twitter.png"
@@ -31,10 +30,10 @@
             onclick="location.href='https://x.com/L1N0_TW'"
           />
           <img
-            src="./img/Medium.png"
-            alt="My Medium"
+            src="./img/email.png"
+            alt="My email"
             class="icon"
-            onclick="location.href='https://medium.com/sekkei-tori-seikatsu'"
+            onclick="location.href='mailto:ossianlin@gmail.com'"
           />
           <img
             src="./img/Github.png"
@@ -91,7 +90,7 @@
           <a href="#"><img src="project-2.png" alt="Project 2" /></a>
         </div>
         <div class="wrapper project-wrapper">
-          <a href="#"><img src="project-3.png" alt="Project 3" /></a>
+          <a href="https://medium.com/sekkei-tori-seikatsu"><img src="img/project-Medium.png" alt="Project 3" /></a>
         </div>
         <div class="wrapper project-wrapper">
           <a href="#"><img src="project-4.png" alt="Project 4" /></a>
