--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="Projects-group">
         <div class="wrapper project-wrapper">
-          <a href="#"><img src="img/project-STEMUP.png" alt="Project 1" /></a>
+          <a href="asset/project-STEMUP.pdf"><img src="img/project-STEMUP.png" alt="Project 1" /></a>
         </div>
         <div class="wrapper project-wrapper">
           <a href="#"><img src="project-2.png" alt="Project 2" /></a>
