--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <button class="btn download-btn">Resume</button>
       </a>
       <div>
-        <button class="btn btn-color-1" onclick="openPop()">Share</button>
+        <button class="btn btn-color-1" onclick="openPop()"><a>Share</a></button>
         <div id="popupDialog" style="display: none">
           <img src="./img/qr-code.png" alt="QR code" />
           <button class="btn btn-color-1" onclick="openPop()">Close</button>
