--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
       </div>
       <div class="Projects-group">
         <div class="wrapper project-wrapper">
-          <a href="asset/project-STEMUP.pdf"><img src="img/project-STEMUP.png" alt="Project 1" /></a>
+          <a href="#"><img src="img/comingSoon.png" alt="Project 1" /></a>
         </div>
         <div class="wrapper project-wrapper">
-          <a href="#"><img src="project-2.png" alt="Project 2" /></a>
+          <a href="asset/project-STEMUP.pdf"><img src="img/project-STEMUP.png" alt="Project 2" /></a>
         </div>
         <div class="wrapper project-wrapper">
           <a href="https://medium.com/sekkei-tori-seikatsu"><img src="img/project-Medium.png" alt="Project 3" /></a>
         </div>
         <div class="wrapper project-wrapper">
-          <a href="#"><img src="project-4.png" alt="Project 4" /></a>
+          <a href="#"><img src="img/comingSoon.png" alt="Project 4" /></a>
         </div>
       </div>
     </section>
