--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="img/Portrait.png">
+    <meta property="og:image" content="https://ossianlin.com/img/Portrait.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:title" content="Hi, I’m Ossian Lin.">
     <meta property="og:description" content="A diligent Product Designer in Taiwan.">
