--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- HTML Meta Tags -->
+<meta name="description" content="A diligent Product Designer in Taiwan.">
+
+<!-- Open Graph Meta Tags -->
+<meta property="og:url" content="https://ossianlin.com">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Hi, I’m Ossian Lin.">
+<meta property="og:description" content="A diligent Product Designer in Taiwan.">
+<meta property="og:image" content=""><!-- Load error, please check URL -->
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="ossianlin.com">
+<meta property="twitter:url" content="https://ossianlin.com">
+<meta name="twitter:title" content="Hi, I’m Ossian Lin.">
+<meta name="twitter:description" content="A diligent Product Designer in Taiwan.">
+<meta name="twitter:image" content="">
+
+<!-- Meta Tags Generated via https://opengraph.dev -->
     <title>Ossian Lin &nbsp;| &nbsp;A Product Designer</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
