--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Hi, I’m Ossian Lin.">
     <meta property="og:description" content="A diligent Product Designer in Taiwan.">
-    <meta property="og:image" content=""><!-- Load error, please check URL -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/L1NO/L1NO.github.io/main/img/Portrait.png"><!-- Load error, please check URL -->
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="ossianlin.com">
     <meta property="twitter:url" content="https://ossianlin.com">
     <meta name="twitter:title" content="Hi, I’m Ossian Lin.">
     <meta name="twitter:description" content="A diligent Product Designer in Taiwan.">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/L1NO/L1NO.github.io/main/img/Portrait.png">
     <!-- Meta Tags Generated via https://opengraph.dev -->
     <title>Ossian Lin &nbsp;| &nbsp;A Product Designer</title>
     <link rel="stylesheet" href="style.css" />
