--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- HTML Meta Tags -->
-    <title>Ossian Lin  |  A Product Designer</title>
-    <meta name="description" content="A diligent Product Designer in Taiwan.">
+    <title>Ossian Lin | A Product Designer</title>
+    <meta name="description" content="A diligent Product Designer in Taiwan." />
     <!-- Open Graph Meta Tags -->
-    <meta property="og:url" content="https://ossianlin.com">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Ossian Lin  |  A Product Designer">
-    <meta property="og:description" content="A diligent Product Designer in Taiwan.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/L1NO/L1NO.github.io/main/img/Portrait.png">
+    <meta property="og:url" content="https://ossianlin.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Ossian Lin  |  A Product Designer" />
+    <meta
+      property="og:description"
+      content="A diligent Product Designer in Taiwan."
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/L1NO/L1NO.github.io/main/img/Portrait.png"
+    />
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="ossianlin.com">
-    <meta property="twitter:url" content="https://ossianlin.com">
-    <meta name="twitter:title" content="Ossian Lin  |  A Product Designer">
-    <meta name="twitter:description" content="A diligent Product Designer in Taiwan.">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/L1NO/L1NO.github.io/main/img/Portrait.png">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="ossianlin.com" />
+    <meta property="twitter:url" content="https://ossianlin.com" />
+    <meta name="twitter:title" content="Ossian Lin  |  A Product Designer" />
+    <meta
+      name="twitter:description"
+      content="A diligent Product Designer in Taiwan."
+    />
+    <meta
+      name="twitter:image"
+      content="https://raw.githubusercontent.com/L1NO/L1NO.github.io/main/img/Portrait.png"
+    />
     <!-- Meta Tags Generated via https://opengraph.dev -->
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
@@ -100,16 +112,48 @@
       </div>
       <div class="Projects-group">
         <div class="wrapper project-wrapper">
-          <a href="#"><img src="img/comingSoon.png" alt="Project 1" /></a>
+          <a href="#">
+            <img src="img/comingSoon.png" alt="Project 1" />
+            <div class="project-overlay">
+              <h3 class="project-title">Coming Soon</h3>
+              <p class="project-description">
+                Exciting new project in development
+              </p>
+            </div>
+          </a>
         </div>
         <div class="wrapper project-wrapper">
-          <a href="asset/project-STEMUP.pdf"><img src="img/project-STEMUP.png" alt="Project 2" /></a>
+          <a href="asset/project-STEMUP.pdf">
+            <img src="img/project-STEMUP.png" alt="Project 2" />
+            <div class="project-overlay">
+              <h3 class="project-title">STEM UP</h3>
+              <p class="project-description">
+                An AR English learning platform.
+              </p>
+            </div>
+          </a>
         </div>
         <div class="wrapper project-wrapper">
-          <a href="https://medium.com/sekkei-tori-seikatsu"><img src="img/project-Medium.png" alt="Project 3" /></a>
+          <a href="https://medium.com/sekkei-tori-seikatsu">
+            <img src="img/project-Medium.png" alt="Project 3" />
+            <div class="project-overlay">
+              <h3 class="project-title">Medium Publication</h3>
+              <p class="project-description">
+                Medium publication on design and lifestyle.
+              </p>
+            </div>
+          </a>
         </div>
         <div class="wrapper project-wrapper">
-          <a href="#"><img src="img/comingSoon.png" alt="Project 4" /></a>
+          <a href="#">
+            <img src="img/comingSoon.png" alt="Project 4" />
+            <div class="project-overlay">
+              <h3 class="project-title">Coming Soon</h3>
+              <p class="project-description">
+                Another exciting project in the works
+              </p>
+            </div>
+          </a>
         </div>
       </div>
     </section>
