--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="project-overlay">
               <h3 class="project-title">Medium Publication</h3>
               <p class="project-description">
-                Medium publication on design and lifestyle.
+                Writing for UX design and lifestyle.
               </p>
             </div>
           </a>
