--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         </div>
       </div>
     </section>
-    <section class="experiences" id="experiences">
+    <section class="skill" id="skill">
       <div class="section-title-container">
         <h2 class="section-title">Experience</h2>
       </div>
-      <div class="experiences-group"></div>
+      <div class="skill-group"></div>
     </section>
     <section class="Projects" id="Projects">
       <div class="section-title-container">
@@ -139,7 +139,7 @@
             <div class="project-overlay">
               <h3 class="project-title">Medium Publication</h3>
               <p class="project-description">
-                Writing for UX design and lifestyle.
+                Medium publication on design and lifestyle.
               </p>
             </div>
           </a>
@@ -160,6 +160,6 @@
     <footer>
       <p>&copy Ossian Lin 2025</p>
     </footer>
-    <script src="experiences.js"></script>
+    <script src="skill.js"></script>
   </body>
 </html>
